--- a/src/views/posts/index.ejs
+++ b/src/views/posts/index.ejs
@@ -14,6 +14,8 @@
 
         <p>A community wall to share information and strike up conversation.</p>
 
+        <a href="/posts/new" class="btn btn-success">Write A Post</a>
+
         <ul class="list-group">
             <% posts.forEach((post) => { %>
                 <li class="list-group-item">
