--- a/src/views/posts/edit.ejs
+++ b/src/views/posts/edit.ejs
@@ -10,6 +10,8 @@
 
         <main class="container">
 
+            <% include ../static/partials/messages.ejs %>
+
             <h1>Edit Post</h1>
 
             <form action="/posts/<%= post.id %>/update" method="post">
