--- a/src/views/posts/new.ejs
+++ b/src/views/posts/new.ejs
@@ -8,6 +8,8 @@
 
         <main class="container">
 
+            <% include ../static/partials/messages.ejs %>
+
             <h1>Write A Post</h1>
 
             <form action="/posts/create" method="post">
