working through debugging new post form

--- a/src/views/posts/index.ejs
+++ b/src/views/posts/index.ejs
@@ -16,7 +16,9 @@
 
             <p>A community wall to share information and strike up conversation.</p>
 
-            <a href="/posts/new" class="btn btn-success">Write A Post</a>
+            <% if(currentUser) { %>
+                <a href="/posts/new" class="btn btn-success">Write A Post</a>
+            <% } %>
 
             <ul class="list-group">
                 <% posts.forEach((post) => { %>
